--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
 		<% if signed_in? %>
 		<li><%= link_to "Sign out", signout_path, :method => :delete %></li>
 		<% else %>
-		<li><%= link_to "Sign in" signin_path %></li>
+		<li><%= link_to "Sign in", signin_path %></li>
 		<% end %>
 	</ul>
 </div>
