--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,11 +3,7 @@
 <%= will_paginate %>
 
 <ul class = "users">
-	<% @users.each do |user| %>
-	<li>
-		<%= gravatar_for user, :size => 30 %>
-		<%= link_to h(user.name), user %>
-	</li>
+	<%= render @users %>
 	<% end %>
 </ul>
 
